--- a/Project - Spring 2023.ipynb
+++ b/Project - Spring 2023.ipynb
@@ -44,14 +44,14 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: wbdata in c:\\users\\bogla_d7nsnlv\\anaconda3\\lib\\site-packages (0.3.0)\n",
-      "Requirement already satisfied: tabulate>=0.8.5 in c:\\users\\bogla_d7nsnlv\\anaconda3\\lib\\site-packages (from wbdata) (0.9.0)\n",
       "Requirement already satisfied: requests>=2.0 in c:\\users\\bogla_d7nsnlv\\anaconda3\\lib\\site-packages (from wbdata) (2.25.1)\n",
       "Requirement already satisfied: appdirs<2.0,>=1.4 in c:\\users\\bogla_d7nsnlv\\anaconda3\\lib\\site-packages (from wbdata) (1.4.4)\n",
+      "Requirement already satisfied: tabulate>=0.8.5 in c:\\users\\bogla_d7nsnlv\\anaconda3\\lib\\site-packages (from wbdata) (0.9.0)\n",
       "Requirement already satisfied: decorator>=4.0 in c:\\users\\bogla_d7nsnlv\\anaconda3\\lib\\site-packages (from wbdata) (5.0.6)\n",
+      "Requirement already satisfied: idna<3,>=2.5 in c:\\users\\bogla_d7nsnlv\\anaconda3\\lib\\site-packages (from requests>=2.0->wbdata) (2.10)\n",
       "Requirement already satisfied: chardet<5,>=3.0.2 in c:\\users\\bogla_d7nsnlv\\anaconda3\\lib\\site-packages (from requests>=2.0->wbdata) (4.0.0)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\bogla_d7nsnlv\\anaconda3\\lib\\site-packages (from requests>=2.0->wbdata) (2020.12.5)\n",
       "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\bogla_d7nsnlv\\anaconda3\\lib\\site-packages (from requests>=2.0->wbdata) (1.26.4)\n",
-      "Requirement already satisfied: idna<3,>=2.5 in c:\\users\\bogla_d7nsnlv\\anaconda3\\lib\\site-packages (from requests>=2.0->wbdata) (2.10)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -522,12 +522,12 @@
       "Requirement already satisfied: pycountry in c:\\users\\bogla_d7nsnlv\\anaconda3\\lib\\site-packages (22.3.5)\n",
       "Requirement already satisfied: pycountry_convert in c:\\users\\bogla_d7nsnlv\\anaconda3\\lib\\site-packages (0.7.2)\n",
       "Requirement already satisfied: setuptools in c:\\users\\bogla_d7nsnlv\\anaconda3\\lib\\site-packages (from pycountry) (52.0.0.post20210125)\n",
+      "Requirement already satisfied: pytest-mock>=1.6.3 in c:\\users\\bogla_d7nsnlv\\anaconda3\\lib\\site-packages (from pycountry_convert) (3.10.0)\n",
       "Requirement already satisfied: pytest-cov>=2.5.1 in c:\\users\\bogla_d7nsnlv\\anaconda3\\lib\\site-packages (from pycountry_convert) (4.0.0)\n",
       "Requirement already satisfied: pytest>=3.4.0 in c:\\users\\bogla_d7nsnlv\\anaconda3\\lib\\site-packages (from pycountry_convert) (6.2.3)\n",
+      "Requirement already satisfied: repoze.lru>=0.7 in c:\\users\\bogla_d7nsnlv\\anaconda3\\lib\\site-packages (from pycountry_convert) (0.7)\n",
       "Requirement already satisfied: wheel>=0.30.0 in c:\\users\\bogla_d7nsnlv\\anaconda3\\lib\\site-packages (from pycountry_convert) (0.36.2)\n",
       "Requirement already satisfied: pprintpp>=0.3.0 in c:\\users\\bogla_d7nsnlv\\anaconda3\\lib\\site-packages (from pycountry_convert) (0.4.0)\n",
-      "Requirement already satisfied: pytest-mock>=1.6.3 in c:\\users\\bogla_d7nsnlv\\anaconda3\\lib\\site-packages (from pycountry_convert) (3.10.0)\n",
-      "Requirement already satisfied: repoze.lru>=0.7 in c:\\users\\bogla_d7nsnlv\\anaconda3\\lib\\site-packages (from pycountry_convert) (0.7)\n",
       "Requirement already satisfied: attrs>=19.2.0 in c:\\users\\bogla_d7nsnlv\\anaconda3\\lib\\site-packages (from pytest>=3.4.0->pycountry_convert) (20.3.0)\n",
       "Requirement already satisfied: iniconfig in c:\\users\\bogla_d7nsnlv\\anaconda3\\lib\\site-packages (from pytest>=3.4.0->pycountry_convert) (1.1.1)\n",
       "Requirement already satisfied: packaging in c:\\users\\bogla_d7nsnlv\\anaconda3\\lib\\site-packages (from pytest>=3.4.0->pycountry_convert) (20.9)\n",
@@ -1042,7 +1042,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 36,
+   "id": "a8ec4fd0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "population.to_csv(\"populationWithContinent.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "176601b4",
    "metadata": {
     "scrolled": true
@@ -1074,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "8057e5f5",
    "metadata": {},
    "outputs": [
@@ -1218,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "d8ab0a14",
    "metadata": {},
    "outputs": [
@@ -1259,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "2954bbfc",
    "metadata": {},
    "outputs": [
@@ -1358,7 +1368,7 @@
        "4  2000        Oceania             30.30  2000       945.163168       19"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1371,7 +1381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "0d7d6056",
    "metadata": {
     "scrolled": false
@@ -1541,7 +1551,7 @@
        "2           ha  6000.0    E  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1553,7 +1563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "7b6304d9",
    "metadata": {},
    "outputs": [
@@ -1670,7 +1680,7 @@
        "2            A  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1682,7 +1692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "0b3c7853",
    "metadata": {},
    "outputs": [
@@ -1806,7 +1816,7 @@
        "2             12000.0    A      Asia  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1819,7 +1829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "a3ba72f2",
    "metadata": {
     "scrolled": true
@@ -1858,7 +1868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "cbfc9057",
    "metadata": {},
    "outputs": [
@@ -1970,7 +1980,7 @@
        "4  9.662191e+08  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1983,7 +1993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "809fa200",
    "metadata": {},
    "outputs": [
@@ -2069,7 +2079,7 @@
        "4  2000        Oceania             30.30       945.163168  9.662191e+08"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2081,7 +2091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "c33b83b1",
    "metadata": {},
    "outputs": [
@@ -2110,7 +2120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "c1255c25",
    "metadata": {},
    "outputs": [
@@ -2130,7 +2140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "5ba91496",
    "metadata": {},
    "outputs": [
@@ -2149,7 +2159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "9ed04546",
    "metadata": {},
    "outputs": [
@@ -2159,7 +2169,7 @@
        "Text(0.5, 1.0, 'Population')"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2184,7 +2194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "bf34676e",
    "metadata": {
     "scrolled": true
@@ -2196,7 +2206,7 @@
        "Text(0.5, 1.0, 'Forest coverage')"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2221,7 +2231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "id": "f05c598e",
    "metadata": {
     "scrolled": false
@@ -2233,7 +2243,7 @@
        "Text(0.5, 1.0, 'Food production')"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2258,8 +2268,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "9df1473f",
+   "execution_count": 34,
+   "id": "c5506e58",
    "metadata": {},
    "outputs": [
     {
@@ -2382,7 +2392,7 @@
        "1579                   1  South America  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2394,9 +2404,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "1b99650b",
-   "metadata": {},
+   "execution_count": 35,
+   "id": "9e234646",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2404,7 +2416,7 @@
        "Text(0.5, 1.0, 'Forest coverage')"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2426,6 +2438,14 @@
     "sns.barplot(data=filtered_global_forest_df, y='value', x='date', hue='countryiso3code')\n",
     "plt.title('Forest coverage')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd1dafc0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
