--- a/Project - Spring 2023.ipynb
+++ b/Project - Spring 2023.ipynb
@@ -45,12 +45,12 @@
      "text": [
       "Requirement already satisfied: wbdata in c:\\users\\bogla_d7nsnlv\\anaconda3\\lib\\site-packages (0.3.0)\n",
       "Requirement already satisfied: requests>=2.0 in c:\\users\\bogla_d7nsnlv\\anaconda3\\lib\\site-packages (from wbdata) (2.25.1)\n",
-      "Requirement already satisfied: appdirs<2.0,>=1.4 in c:\\users\\bogla_d7nsnlv\\anaconda3\\lib\\site-packages (from wbdata) (1.4.4)\n",
       "Requirement already satisfied: tabulate>=0.8.5 in c:\\users\\bogla_d7nsnlv\\anaconda3\\lib\\site-packages (from wbdata) (0.9.0)\n",
+      "Requirement already satisfied: appdirs<2.0,>=1.4 in c:\\users\\bogla_d7nsnlv\\anaconda3\\lib\\site-packages (from wbdata) (1.4.4)\n",
       "Requirement already satisfied: decorator>=4.0 in c:\\users\\bogla_d7nsnlv\\anaconda3\\lib\\site-packages (from wbdata) (5.0.6)\n",
-      "Requirement already satisfied: idna<3,>=2.5 in c:\\users\\bogla_d7nsnlv\\anaconda3\\lib\\site-packages (from requests>=2.0->wbdata) (2.10)\n",
       "Requirement already satisfied: chardet<5,>=3.0.2 in c:\\users\\bogla_d7nsnlv\\anaconda3\\lib\\site-packages (from requests>=2.0->wbdata) (4.0.0)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\bogla_d7nsnlv\\anaconda3\\lib\\site-packages (from requests>=2.0->wbdata) (2020.12.5)\n",
+      "Requirement already satisfied: idna<3,>=2.5 in c:\\users\\bogla_d7nsnlv\\anaconda3\\lib\\site-packages (from requests>=2.0->wbdata) (2.10)\n",
       "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\bogla_d7nsnlv\\anaconda3\\lib\\site-packages (from requests>=2.0->wbdata) (1.26.4)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
@@ -522,12 +522,12 @@
       "Requirement already satisfied: pycountry in c:\\users\\bogla_d7nsnlv\\anaconda3\\lib\\site-packages (22.3.5)\n",
       "Requirement already satisfied: pycountry_convert in c:\\users\\bogla_d7nsnlv\\anaconda3\\lib\\site-packages (0.7.2)\n",
       "Requirement already satisfied: setuptools in c:\\users\\bogla_d7nsnlv\\anaconda3\\lib\\site-packages (from pycountry) (52.0.0.post20210125)\n",
-      "Requirement already satisfied: pytest-mock>=1.6.3 in c:\\users\\bogla_d7nsnlv\\anaconda3\\lib\\site-packages (from pycountry_convert) (3.10.0)\n",
-      "Requirement already satisfied: pytest-cov>=2.5.1 in c:\\users\\bogla_d7nsnlv\\anaconda3\\lib\\site-packages (from pycountry_convert) (4.0.0)\n",
-      "Requirement already satisfied: pytest>=3.4.0 in c:\\users\\bogla_d7nsnlv\\anaconda3\\lib\\site-packages (from pycountry_convert) (6.2.3)\n",
       "Requirement already satisfied: repoze.lru>=0.7 in c:\\users\\bogla_d7nsnlv\\anaconda3\\lib\\site-packages (from pycountry_convert) (0.7)\n",
-      "Requirement already satisfied: wheel>=0.30.0 in c:\\users\\bogla_d7nsnlv\\anaconda3\\lib\\site-packages (from pycountry_convert) (0.36.2)\n",
+      "Requirement already satisfied: pytest-mock>=1.6.3 in c:\\users\\bogla_d7nsnlv\\anaconda3\\lib\\site-packages (from pycountry_convert) (3.10.0)\n",
       "Requirement already satisfied: pprintpp>=0.3.0 in c:\\users\\bogla_d7nsnlv\\anaconda3\\lib\\site-packages (from pycountry_convert) (0.4.0)\n",
+      "Requirement already satisfied: pytest-cov>=2.5.1 in c:\\users\\bogla_d7nsnlv\\anaconda3\\lib\\site-packages (from pycountry_convert) (4.0.0)\n",
+      "Requirement already satisfied: wheel>=0.30.0 in c:\\users\\bogla_d7nsnlv\\anaconda3\\lib\\site-packages (from pycountry_convert) (0.36.2)\n",
+      "Requirement already satisfied: pytest>=3.4.0 in c:\\users\\bogla_d7nsnlv\\anaconda3\\lib\\site-packages (from pycountry_convert) (6.2.3)\n",
       "Requirement already satisfied: attrs>=19.2.0 in c:\\users\\bogla_d7nsnlv\\anaconda3\\lib\\site-packages (from pytest>=3.4.0->pycountry_convert) (20.3.0)\n",
       "Requirement already satisfied: iniconfig in c:\\users\\bogla_d7nsnlv\\anaconda3\\lib\\site-packages (from pytest>=3.4.0->pycountry_convert) (1.1.1)\n",
       "Requirement already satisfied: packaging in c:\\users\\bogla_d7nsnlv\\anaconda3\\lib\\site-packages (from pytest>=3.4.0->pycountry_convert) (20.9)\n",
@@ -1042,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "id": "a8ec4fd0",
    "metadata": {},
    "outputs": [],
@@ -1260,14 +1260,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "593906aa",
-   "metadata": {},
-   "source": [
-    "Third dataset on food production"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 21,
    "id": "2954bbfc",
@@ -1377,6 +1369,14 @@
     "merged_df = pd.merge(continent_population_data, continent_forest_data, left_on=['continent','Year'], right_on=['continent', 'Year'], how='inner')\n",
     "print(merged_df.shape)\n",
     "merged_df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "593906aa",
+   "metadata": {},
+   "source": [
+    "Third dataset on food production"
    ]
   },
   {
@@ -1563,7 +1563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 45,
    "id": "7b6304d9",
    "metadata": {},
    "outputs": [
@@ -1680,19 +1680,19 @@
        "2            A  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "filtered_food= food.filter(items=['Area','Item','Element','Year','Unit','Value','Flag']).loc[(food['Flag']=='A') & (food['Year']>=2000) & (food['Year']<2021)]\n",
+    "filtered_food= food.filter(items=['Area','Item','Element','Year','Unit','Value','Flag']).loc[(food['Flag']=='A')& (food['Element']=='Area harvested') & (food['Year']>=2000) & (food['Year']<2021)]\n",
     "filtered_food.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 46,
    "id": "0b3c7853",
    "metadata": {},
    "outputs": [
@@ -1816,7 +1816,7 @@
        "2             12000.0    A      Asia  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
