--- a/Project_May_2023.ipynb
+++ b/Project_May_2023.ipynb
@@ -2670,6 +2670,149 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 62,
+   "id": "bc9a9cb5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 140 entries, 1 to 1274\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column            Non-Null Count  Dtype  \n",
+      "---  ------            --------------  -----  \n",
+      " 0   Year              140 non-null    int64  \n",
+      " 1   country_name      140 non-null    object \n",
+      " 2   population value  140 non-null    float64\n",
+      " 3   forest coverage   140 non-null    float64\n",
+      " 4   Area harvested    140 non-null    float64\n",
+      " 5   continent         140 non-null    object \n",
+      "dtypes: float64(3), int64(1), object(2)\n",
+      "memory usage: 7.7+ KB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>country_name</th>\n",
+       "      <th>population value</th>\n",
+       "      <th>forest coverage</th>\n",
+       "      <th>Area harvested</th>\n",
+       "      <th>continent</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2000</td>\n",
+       "      <td>Argentina</td>\n",
+       "      <td>36783859.0</td>\n",
+       "      <td>12.196486</td>\n",
+       "      <td>35446241.0</td>\n",
+       "      <td>South America</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>2000</td>\n",
+       "      <td>France</td>\n",
+       "      <td>59144034.0</td>\n",
+       "      <td>27.919871</td>\n",
+       "      <td>25022565.0</td>\n",
+       "      <td>Europe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>2000</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>82187614.0</td>\n",
+       "      <td>32.537613</td>\n",
+       "      <td>17221998.0</td>\n",
+       "      <td>Europe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>2000</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>57311001.5</td>\n",
+       "      <td>28.301456</td>\n",
+       "      <td>14935592.0</td>\n",
+       "      <td>Europe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>2000</td>\n",
+       "      <td>Japan</td>\n",
+       "      <td>126233869.0</td>\n",
+       "      <td>68.246914</td>\n",
+       "      <td>6249231.0</td>\n",
+       "      <td>Asia</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Year country_name  population value  forest coverage  Area harvested  \\\n",
+       "1   2000    Argentina        36783859.0        12.196486      35446241.0   \n",
+       "22  2000       France        59144034.0        27.919871      25022565.0   \n",
+       "24  2000      Germany        82187614.0        32.537613      17221998.0   \n",
+       "32  2000        Italy        57311001.5        28.301456      14935592.0   \n",
+       "34  2000        Japan       126233869.0        68.246914       6249231.0   \n",
+       "\n",
+       "        continent  \n",
+       "1   South America  \n",
+       "22         Europe  \n",
+       "24         Europe  \n",
+       "32         Europe  \n",
+       "34           Asia  "
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "selected_countries = ['Japan', 'Germany', 'Italy', 'Spain', 'France', 'Ukraine', 'Argentina']  \n",
+    "\n",
+    "selected_countries_df = final_df_filtered[final_df_filtered['country_name'].isin(selected_countries)]\n",
+    "selected_countries_df.info()\n",
+    "selected_countries_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "b8ca39b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "selected_countries_df.to_csv(\"selected_countries_df.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 35,
    "id": "4b674869",
    "metadata": {},
@@ -3043,7 +3186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a3aa06b",
+   "id": "9c8c2b7d",
    "metadata": {},
    "outputs": [],
    "source": [
